<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragments.registration.pagers.GenderFragment">



    <TextView
        android:id="@+id/gender_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/gender_title"
        android:textColor="?android:textColorPrimary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/back_button" />

    <TextView
        android:id="@+id/gender_description"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/gender_description"
        android:textColor="@color/gray"
        android:textSize="16sp" />


    <CheckedTextView
        android:id="@+id/checkbox_man"
        android:layout_marginTop="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checked_text_view_man"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:padding="25dp"
        android:background="@drawable/checked_text_view_background_selector"
        android:checkMark="?android:listChoiceIndicatorSingle" />

    <CheckedTextView
        android:id="@+id/checkbox_woman"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checked_text_view_woman"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:padding="25dp"
        android:background="@drawable/checked_text_view_background_selector"
        android:checkMark="?android:listChoiceIndicatorSingle" />

</LinearLayout>