<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.onboarding.OnboardingFragment">


    <Button
        android:id="@+id/sign_up"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/pink"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@+id/guidelineCenter"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />

    <Button
        android:id="@+id/log_in"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/log_in"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/have_account"
        app:layout_constraintStart_toStartOf="@+id/have_account"
        app:layout_constraintTop_toBottomOf="@+id/have_account"
        app:strokeColor="@color/like_tint"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/log_in_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/onboarding_app_name"
        android:textColor="?android:textColorPrimary"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />

    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/do_you_have_account"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@+id/guidelineCenter" />

    <TextView
        android:id="@+id/privacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/accept_privacy_policy"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>