<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".ui.fragments.profile_filler.pages.AboutYourselfFragment">

    <TextView
        android:id="@+id/about_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/about_title"
        android:textColor="?android:textColorPrimary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />

    <TextView
        android:id="@+id/about_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/about_description"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/about_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_description"
        app:layout_constraintVertical_bias="0.2"
        app:counterMaxLength="500">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/about_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="textCapSentences"
            android:hint="@string/about_hint"
            android:maxLength="500" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="Минимум 10 символов"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/about_text_input_layout"
        app:layout_constraintStart_toStartOf="@+id/about_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/about_text_input_layout" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@drawable/button_state_background"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/button_next"
        android:textColor="@drawable/button_text_state_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>